--- a/src/app/pages/markers/markers.page.html
+++ b/src/app/pages/markers/markers.page.html
@@ -1,15 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>map</ion-title>
+    <ion-title>markers</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">map</ion-title>
+      <ion-title size="large">markers</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <div #mapElement style="height: 100%;"></div>
 </ion-content>
